Add search form partial and styles; integrate search functionality into articles index view

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/search_form' %>
+
 <div class="articles-container">
   <% @articles.each do |article| %>
     <div class="article-card">
